Fixed the background issue of Team page and center aligned the team cards

--- a/src/App.css
+++ b/src/App.css
@@ -116,6 +116,7 @@ body::before {
   min-height: 100vh;
   width: 100%;
   padding: 0rem 1rem;
+  margin-top : -10rem ;
   background: linear-gradient(180deg, #071342c2 0%, #031f47 40%, #000000 100%);
   display: flex;
   flex-direction: column;
