--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background: linear-gradient(135deg, rgba(0, 0, 0, 0.745) 0%, rgba(0, 0, 0, 0.95) 100%);
+  background: linear-gradient(135deg, rgba(0, 0, 0, 0.937) 0%, rgba(0, 0, 0, 0.95) 100%);
   color: #ffffff;
   padding: 1rem 1rem 4rem 1rem;
   backdrop-filter: blur(20px);
